<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".view.activity.AnimationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">


        <android.support.v7.widget.Toolbar
            android:id="@+id/anim_main_toobar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/animation_in_android_banner"
            />
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_alpha_animation"
                style="@style/AnimButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="0"
                android:text="@string/animations_alpha" />


            <Button
                android:id="@+id/button_Translate_animation"
                style="@style/AnimButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/animations_translate" />

            <Button
                android:id="@+id/button_Scale_animation"
                style="@style/AnimButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/animations_scale" />


            <Button
                android:id="@+id/button_Rotate_animation"
                style="@style/AnimButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="3"
                android:text="@string/animations_rotate" />


            <Button
                android:id="@+id/button_value_animator"
                style="@style/AnimButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="4"
                android:text="@string/animations_value_animator" />

            <Button
                android:id="@+id/button_set_animation"
                style="@style/AnimButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="5"
                android:text="@string/animations_set_animation" />


            <Button
                android:id="@+id/button_YoYo_animation"
                style="@style/AnimButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin_2x"
                android:tag="6"
                android:text="@string/animations_YoYo_animation" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>